<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:padding="5dp"
    android:paddingStart="15dp"
    android:paddingEnd="15dp"
    android:background="@drawable/white_gray_border_top">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txtVName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"/>
        <TextView
            android:layout_toEndOf="@id/txtVName"
            android:id="@+id/txtChallengeName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Abdu Hussain Hawi"
            android:textColor="@color/black"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txtVAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"/>
        <TextView
            android:id="@+id/txtChallengeAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="30 years"
            android:layout_toEndOf="@id/txtVAge"
            android:textColor="@color/black"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txtVCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city"/>
        <TextView
            android:id="@+id/txtChallengeCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Jeddah"
            android:layout_toEndOf="@id/txtVCity"
            android:textColor="@color/black"/>
    </RelativeLayout>
</LinearLayout>